--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>北京邮电大学邮政编码</title>
+    <!--引入百度地图API -->
+    <!-- <script type="text/javascript"src="http://api.map.baidu.com/api?v=2.0&ak=qBK4NRB8ji1GZbElu6p9gnePCkAxizL2"></script> -->
+    <script type="text/javascript" src="http://api.map.baidu.com/api?type=webgl&v=1.0&ak=qBK4NRB8ji1GZbElu6p9gnePCkAxizL2"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
